--- a/build.gradle
+++ b/build.gradle
@@ -2,16 +2,20 @@ group 'com.whis'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.2.21'
-    ext.spring_boot_version = '1.5.9.RELEASE'
-    ext.spring_version = '4.3.13.RELEASE'
+    ext.kotlinVersion = '1.2.30'
+    ext.springBootVersion = '1.5.9.RELEASE'
+    ext.springVersion = '4.3.13.RELEASE'
 
     repositories {
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+        jcenter()
         mavenCentral()
     }
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:$spring_boot_version")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
     }
 }
 
@@ -25,6 +29,11 @@ apply plugin: 'org.springframework.boot'
 sourceCompatibility = 1.8
 
 repositories {
+    maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+    maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+    maven { url "https://jitpack.io" }
+    mavenCentral()
+    jcenter()
     mavenCentral()
 }
 
@@ -46,14 +55,29 @@ dependencies {
     compile 'mysql:mysql-connector-java:5.1.44'
     compile 'org.apache.tomcat:tomcat-jdbc:9.0.1'
 
+    // http request
+    compile 'com.squareup.okhttp3:okhttp:3.10.0'
+
     // spring
     compile 'org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.1'
-    compile group: 'org.springframework', name: 'spring-jdbc', version: "$spring_version"
+    compile group: 'org.springframework', name: 'spring-jdbc', version: "$springVersion"
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
     compile("org.springframework.boot:spring-boot-starter-thymeleaf")
     compile("org.springframework.boot:spring-boot-devtools")
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+
+
+    // test
+    compile("org.springframework.boot:spring-boot-starter-undertow:$springBootVersion")
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
+    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
+
+    testCompile("org.junit.jupiter:junit-jupiter-api:5.0.1")
+    testRuntime("org.junit.jupiter:junit-jupiter-engine:5.0.1")
+    testCompile('com.github.sbrannen:spring-test-junit5:1.0.0')
+    testCompile("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
 }
 
 compileKotlin {
