--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,11 @@ group 'com.whis'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlinVersion = '1.2.30'
-    ext.springBootVersion = '1.5.9.RELEASE'
-    ext.springVersion = '4.3.13.RELEASE'
-
+    ext {
+        kotlinVersion = '1.2.31'
+        springBootVersion = '2.0.0.RELEASE'
+        springVersion = '5.0.4.RELEASE'
+    }
     repositories {
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
@@ -20,13 +21,30 @@ buildscript {
 }
 
 
-
 apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 sourceCompatibility = 1.8
+
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+
+bootJar {
+    baseName = 'app'
+    version =  ''
+}
 
 repositories {
     maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
@@ -52,8 +70,10 @@ dependencies {
     compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.8'
 
     // db
-    compile 'mysql:mysql-connector-java:5.1.44'
-    compile 'org.apache.tomcat:tomcat-jdbc:9.0.1'
+    compile 'mysql:mysql-connector-java:5.1.45'
+    compile 'redis.clients:jedis:2.9.0'
+    compile 'org.jooq:jooq:3.10.2'
+    compile 'org.apache.tomcat:tomcat-jdbc:9.0.5'
 
     // http request
     compile 'com.squareup.okhttp3:okhttp:3.10.0'
@@ -62,11 +82,10 @@ dependencies {
     compile 'org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.1'
     compile group: 'org.springframework', name: 'spring-jdbc', version: "$springVersion"
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
-    compile("org.springframework.boot:spring-boot-starter-thymeleaf")
-    compile("org.springframework.boot:spring-boot-devtools")
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-
+    compile "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
+    compile "org.springframework.boot:spring-boot-starter-freemarker:$springBootVersion"
+    compile "org.springframework.boot:spring-boot-devtools:$springBootVersion"
+    compile "org.springframework.boot:spring-boot-properties-migrator:$springBootVersion"
 
 
     // test
@@ -74,15 +93,8 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
     compile "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
 
-    testCompile("org.junit.jupiter:junit-jupiter-api:5.0.1")
+    testCompile("org.junit.jupiter:junit-jupiter-api:5.1.0")
     testRuntime("org.junit.jupiter:junit-jupiter-engine:5.0.1")
-    testCompile('com.github.sbrannen:spring-test-junit5:1.0.0')
+    testCompile('com.github.sbrannen:spring-test-junit5:1.0.3')
     testCompile("org.springframework.boot:spring-boot-starter-test:$springBootVersion")
-}
-
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
 }
